--- a/app/views/static/pro.html.erb
+++ b/app/views/static/pro.html.erb
@@ -1,28 +1,27 @@
 <!-- Header -->
     <header id="header">
-      <a class="logo" href="index.html">Industrious</a>
+      <a class="logo" href="#">The Hacking Project 2.0</a>
       <nav>
-        <a href="#menu">Menu</a>
+        <a href="#">Menu</a>
       </nav>
     </header>
 
   <!-- Nav -->
     <nav id="menu">
       <ul class="links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="elements.html">Elements</a></li>
-        <li><a href="generic.html">Generic</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="static/etudiant">Etudiants</a></li>
+        <li><a href="http://www.thehackingproject.com">Contact</a></li>
       </ul>
     </nav>
 
   <!-- Banner -->
     <section id="banner">
       <div class="inner">
-        <h1>Industrious</h1>
-        <p>A responsive business oriented template with a video background<br />
-        designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+        <h1>The Hacking Project</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-      <video autoplay loop muted playsinline src="images/banner.mp4"></video>
+      <video autoplay loop muted playsinline src="https://78.media.tumblr.com/f343c542f892e2387328005afb2a5871/tumblr_nqx8x3SkaQ1tubinno1_1280.jpg"></video>
     </section>
 
   <!-- Highlights -->
