--- a/app/views/static/parts/_section2.html.erb
+++ b/app/views/static/parts/_section2.html.erb
@@ -10,54 +10,54 @@
         <div class="content">
           <header>
             <a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
-            <h3>Feugiat consequat</h3>
+            <h3>Mieux se vendre</h3>
           </header>
-          <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+          <p>Maîtrisez ruby, SQL, et le framework Rails pour construire des applications web. Apprenez des techniques de design avancées en CSS (flexbox, CSS grid). Plongez dans Javascript et explorez ES6. Plus d'infos.</p>
         </div>
       </section>
       <section>
         <div class="content">
           <header>
             <a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-            <h3>Ante sem integer</h3>
+            <h3>Apaiser sa curiosité</h3>
           </header>
-          <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+          <p>Curieux ? Foncez ! The Hacking Project est ouvert à tous. Si vous souhaitez découvrir de nouveaux langages, c'est le lieu parfait.</p>
         </div>
       </section>
       <section>
         <div class="content">
           <header>
             <a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-            <h3>Ipsum consequat</h3>
+            <h3>Faire des petits programmes</h3>
           </header>
-          <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+          <p>Le code ne sert pas qu'à être développeur. C'est un monde merveilleux où il existe un programme pour tout. Savoir lire et écrire le code permet de faire des choses qui vous étaient totalement impossibles.</p>
         </div>
       </section>
       <section>
         <div class="content">
           <header>
             <a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
-            <h3>Interdum gravida</h3>
+            <h3>Tester son idée</h3>
           </header>
-          <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+          <p>Vous avez une idée ? Mettez-la en pratique et développez votre MVP pour prouver que votre concept peut marcher ! Votre go to market passe de 1 an à 4 mois.</p>
         </div>
       </section>
       <section>
         <div class="content">
           <header>
             <a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
-            <h3>Faucibus consequat</h3>
+            <h3>Changer de carrière</h3>
           </header>
-          <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+          <p>Vous avez envie de devenir développeur en informatique ? On va être franc, chez THP vous ne représentez que 10% des personnes qui viennent chez nous.</p>
         </div>
       </section>
       <section>
         <div class="content">
           <header>
             <a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
-            <h3>Accumsan viverra</h3>
+            <h3>La communauté THP</h3>
           </header>
-          <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+          <p>C'est une grande famille qui comprend les moussaillons, les corsaires, les mentors dans une ambiance bienveillante et accueillante. Vous en profitez et l'animez.</p>
         </div>
       </section>
     </div>
