--- a/app/views/static/parts/_section3.html.erb
+++ b/app/views/static/parts/_section3.html.erb
@@ -1,6 +1,37 @@
-<section id="cta" class="wrapper">
+<section id= "cta" class="wrapper">
   <div class="inner">
-    <h2>Chiffres</h2>
-    <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+    <header class="special">
+      <h2>Quelques chiffres </h2>
+      <p>textextext</p>
+    </header>
+    <div class="highlights">
+      <section>
+        <div class="content">
+          <header>
+            <a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
+            <h3>85%</h3>
+          </header>
+          <p> des emplois de 2030 n'existent pas aujourd'hui</p>
+        </div>
+      </section>
+      <section>
+        <div class="content">
+          <header>
+            <a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
+            <h3>19 000</h3>
+          </header>
+          <p> emplois numériques créés en France en 2017</p>
+        </div>
+      </section>
+      <section>
+        <div class="content">
+          <header>
+            <a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
+            <h3>60 %</h3>
+          </header>
+          <p> des moussaillons trouve un emploi 1 mois après la fin de la formation.</p>
+        </div>
+      </section>
+    </div>
   </div>
 </section>
