--- a/app/views/static/parts/_section4.html.erb
+++ b/app/views/static/parts/_section4.html.erb
@@ -2,45 +2,45 @@
   <div class="inner">
     <header class="special">
       <h2>Témoignages</h2>
-      <p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+      <p>Nous préférons laisser nos corsaires parler à notre place.</p>
     </header>
     <div class="testimonials">
       <section>
         <div class="content">
           <blockquote>
-            <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+            <p>"J'ai fait The Hacking Project pour hacker mon process commercial et faire plus. C'était également pour moi un moyen d'avoir une meilleure rémunération."</p>
           </blockquote>
           <div class="author">
             <div class="image">
-              <img src="images/pic01.jpg" alt="" />
+              <%=image_tag("pablo.jpg") %>
             </div>
-            <p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
+            <p class="credit">- <strong>Pablo</strong> <span>Community Manager - Ignition Program</span></p>
           </div>
         </div>
       </section>
       <section>
         <div class="content">
           <blockquote>
-            <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+            <p>En plus de me donner suffisamment de bases en code pour lancer AlgoSki, The Hacking Project m'a réappris à apprendre. Je recommande la formation !</p>
           </blockquote>
           <div class="author">
             <div class="image">
-              <img src="images/pic03.jpg" alt="" />
+              <%=image_tag("isabelle.jpg") %>
             </div>
-            <p class="credit">- <strong>John Doe</strong> <span>CEO - ABC Inc.</span></p>
+            <p class="credit">- <strong>Isabelle Bonnet</strong> <span>CEO - AlgoSki</span></p><br>
           </div>
         </div>
       </section>
       <section>
         <div class="content">
           <blockquote>
-            <p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+            <p>En deux mois, j'avais le niveau de développeur. Très pratique pour parler aux devs quand on fait du produit, ou pour tester à la volée plein de scripts rapides.</p>
           </blockquote>
           <div class="author">
             <div class="image">
-              <img src="images/pic02.jpg" alt="" />
+              <%=image_tag("maxime.jpg") %>
             </div>
-            <p class="credit">- <strong>Janet Smith</strong> <span>CEO - ABC Inc.</span></p>
+            <p class="credit">- <strong>Maxime Souillat</strong> <span>Développeur ruby - Studiomatic</span></p>
           </div>
         </div>
       </section>
