--- a/app/views/static/etudiant.html.erb
+++ b/app/views/static/etudiant.html.erb
@@ -41,3 +41,5 @@
 
   <!-- Footer -->
   <%= render 'static/parts/section7' %>
+
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
