--- a/app/views/static/pro.html.erb
+++ b/app/views/static/pro.html.erb
@@ -21,7 +21,6 @@
         <h1>The Hacking Project</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-      <video autoplay loop muted playsinline src="https://78.media.tumblr.com/f343c542f892e2387328005afb2a5871/tumblr_nqx8x3SkaQ1tubinno1_1280.jpg"></video>
     </section>
 
   <!-- Highlights -->
@@ -156,6 +155,7 @@ rtis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus
       <div class="inner">
         <div class="content">
           <section>
+designed by TEMPLATED and released under the Creative Commons License.
             <h3>Accumsan montes viverra</h3>
             <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
           </section>
