--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,8 +12,9 @@
  *
  *= require_tree .
  *= require_self
- */
- @import url(font-awesome.min.css);
+*/
+
+ @import "font-awesome";
  @import url("https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600");
  /*
  	Industrious by TEMPLATED
