--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
 */
 
- @import "font-awesome";
+ @import "font-awesome.css";
  @import url("https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600");
  /*
  	Industrious by TEMPLATED
