--- a/app/views/static/parts/_section1.html.erb
+++ b/app/views/static/parts/_section1.html.erb
@@ -1,8 +1,7 @@
 <section id="banner">
   <div class="inner">
-    <h1>Industrious</h1>
-    <p>A responsive business oriented template with a video background<br />
-    designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+    <h1>Sortez des sentiers battus, apprenez à coder !</h1>
+    <p>The Hacking Project est un bootcamp gratuit, pour apprendre à coder en 2 mois et demi. Chez nous, pas de professeur ni de cours magistral : vous apprendrez de façon active via le peer-learning et deviendrez un digital nomad !<br /></p>
   </div>
   <video autoplay loop muted playsinline src="<%= image_path('matrix.mp4') %>"></video>
 </section>
