--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1982,10 +1982,12 @@
      position: relative;
      z-index: 3; }
      #banner > .inner > :last-child {
-       margin-bottom: 0; }
+       margin-bottom: 0;
+       color: white;}
    #banner h1 {
      font-size: 4rem;
-     margin-bottom: 1rem; }
+     margin-bottom: 1rem;
+    font-weight: bold; }
    #banner p {
      font-size: 1.5rem; }
    #banner a {
