--- a/app/views/static/parts/_section2.html.erb
+++ b/app/views/static/parts/_section2.html.erb
@@ -1,14 +1,10 @@
 <section class="wrapper">
   <div class="inner">
     <header class="special">
-      <h2>3 bonnes raisons LOL</h2>
-      <p><!-- Mailchimp -->
-
-      <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"b6bb9b2b27c2dcf47afcc216c","lid":"9fb0e97ee6"}) })</script>
-</p>
+      <h2>3 bonnes raisons </h2>
       <p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
     </header>
-    <div class="highlights">
+    <div clasRAIs="highlights">
       <section>
         <div class="content">
           <header>
