--- a/app/views/static/parts/_section1.html.erb
+++ b/app/views/static/parts/_section1.html.erb
@@ -4,5 +4,12 @@
     <p>The Hacking Project est un bootcamp gratuit, pour apprendre à coder en 2 mois et demi. Chez nous, pas de professeur ni de cours magistral : vous apprendrez de façon active via le peer-learning et deviendrez un digital nomad !<br /></p>
   </div>
   <video autoplay loop muted playsinline src="<%= image_path('matrix.mp4') %>"></video>
+
+
+   <p><!-- Mailchimp -->
+
+      <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"b6bb9b2b27c2dcf47afcc216c","lid":"9fb0e97ee6"}) })</script>
+</p>
+
 </section>
 
